--- a/MyWebApi/MyWebApi.csproj
+++ b/MyWebApi/MyWebApi.csproj
@@ -10,6 +10,7 @@
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
 	  <PackageReference Include="System.Text.Json" Version="8.0.0" />
 	  <PackageReference Include="Elsa" Version="3.2.2" />
+	  <PackageReference Include="MessagePack" Version="2.0.323" />
   </ItemGroup>
 
 </Project>
