Remove package lock file

--- a/Directory.build.props
+++ b/Directory.build.props
@@ -1,5 +1,5 @@
 <Project>
 	<PropertyGroup>
-		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+		<!--<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>-->
 	</PropertyGroup>
 </Project>
